# Fundamental-of-CG

./: .gitmodules  README.md
Common/: MvpTransform.hpp  loadStlMode.hpp  vertexTransform.hpp
DisplaySTL/: car.stl  displaySTLMode  displaySTLMode.cc  triangle.STL
opengl/: CMakeLists.txt  camera.cc  camera.h  curve.cc  curve.h  example.hpp  glad.c  main.cc  main.cpp  model.cc  model.h  shader.cc  shader.h  text.cc  text.h
opengl/model/: arrow.STL
opengl/model/object/TeslaModel/: TeslaModel.mtl
opengl/shader/: BlinnPhongFragment.glsl  BlinnPhongVertex.glsl  CurvedFragment.glsl  CurvedGeometry.glsl  CurvedVertex.glsl  fragment.glsl  textFragment.glsl  vertex.glsl
opengles/: chair.STL  square.stl
raytrace/: CMakeLists.txt  README.md  bvh.cc  bvh.h  camera.cc  camera.h  common.hpp  main.cc  material.cc  material.h  object.cc  object.h  onb.cc  onb.h  ray.cc  ray.h  sample.cc  sample.h  texture.cc  texture.h
